# git-moukaeritai-work

./: .gitignore  GEMINI.md  README.md  commit_message.txt  git_experiment_worktree.py  git_setup.py  load_commits_in_memory.py  pyproject.toml
.github/workflows/: python-package-windows.yml  python-package.yml
hello-git-worktree/: README.md  git_experiment_worktree.py  run_experiment_1.py  run_experiment_2.py  run_experiment_3.py
src/git_commit_loader/: __init__.py
src/git_repo_inspector/: __init__.py  __main__.py  branch_loader.py  commit_loader.py  env_utils.py  repo_dir.py  repo_loader.py  test_branch_loader.py  test_commit_loader.py  tui.css  tui.py
tests/: test_branch_loader.py  test_branch_loader_integration.py  test_commit_loader.py  test_commit_loader_integration.py  test_repo_dir.py  test_repo_dir_integration.py  test_tui.py
tests/integration/: test_repo_dir_integration.py
