[tool.poetry]
name = "git-commit-loader"
version = "0.1.0"
description = "Load and parse Git commit objects"
authors = ["Takashi Sasaki <takashi316@gmail.com>"]
packages = [{ include = "git_commit_loader", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
git-commit-loader = "git_commit_loader.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
