[tool.poetry]
name = "git-repo-inspector"
version = "0.1.0"
description = "A tool to inspect Git repositories, loading commits and branches."
authors = ["Takashi Sasaki <takashi316@gmail.com>"]
packages = [{ include = "git_repo_inspector", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8.1"
textual = "^3.5.0"

[tool.poetry.scripts]
git-repo-inspector = "git_repo_inspector.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
